﻿v1.3.8

Storm Legion

Frozen Tempest
* Menu
** Change: Re-ordered Menu items to better portray progress.
* Gangnum
** New: Added Mechanic Spy for Tempest Wrath.
** New: Added personal Alert for Tempest Wrath debuff.
** New: Added personal Alert for Move away from the Tempest after debuff drops.
** New: Added Alert for Blinding Surge.
* Zaviel
** New: Added personal Alert for Arc Weld mechanic.
** New: Added Mechanic Spy for Arc Weld.
** New: Added Alert for Energy Conduit cast warning.
** New: Added Alert for debuff duration of Energy Conduit.
** New: Added Tank-Swap monitor for both Dissonant Vitality and Energy Conduit.
** New: Added Phase Tracking.
** New: Added warning Alert and duration Alert for Ensnaring Jolt.

Triumph of the Dragon Queen
* Cyril
** New: Added Tank-Swap monitoring for Mental Anguish.
** New: Added Alert for Mien of Supremacy purge. After looking through the logs not entirely sure this work first time, it should though.

----
v1.3.7

Encounters
* New: The slash command /kbmreset will now provide an Event.KingMolinator.Encounter.End trigger (Type = "reset").

Phase Monitor
* New: Percent style objectives. Added DisplayName field check for bosses with verbose style names.
* Note: Name should always be the actual Unit name, DisplayName field should be added if you wish this to be something different.

Ready Check
* New: Feast of Domination AP (Warrior, Rogue, High, 60)
* New: Stellar Powersurge Vial (Warrior, Rogue, High, 60)
* New: Luminescent Powerstone (Cleric, Mage, High, 60)
* New: Stellar Brightsurge Vial (Cleric, Mage, High, 60)
* New: Stellar Enduring Vial (Warrior, Rogue, Cleric, High, Tank, 60)
* New: Remarkable Whetstone (Warrior, Rogue, High, 60)

Storm Legion

Frozen Tempest
* Galidra
** New: Added dual Tank-Swap monitoring for Hoarfrost and Voltaic Spasms.
** New: Added Unit Tracking for Shrouding Vortex.
** New: Added a Timer for tracking Phase 1 durations, and first Phase 2.
** New: Added Mechanic Spy for Glacial Rime.