@@ -10,7 +10,7 @@ Author = "Paul Snart"
 Website = "http://www.facebook.com/KingBossMods"
 Email = "kingbossmods@gmail.com"
 
-Version = "1.3.8.626"
+Version = "1.3.8.627"
 
 Environment = "1.9", "1.10", "1.11", "2.0"
 
@@ -24,6 +24,7 @@ RunOnStartup = {
 	"Raids/Storm Legion/Endless Eclipse/Matriarch.lua",
 	"Raids/Storm Legion/Endless Eclipse/Progenitor.lua",
 	"Raids/Storm Legion/Endless Eclipse/Kain.lua",
+	"Raids/Storm Legion/Endless Eclipse/Regulos.lua",
 	"Raids/Storm Legion/Frozen Tempest/FTHeader.lua",
 	"Raids/Storm Legion/Frozen Tempest/Gelidra.lua",
 	"Raids/Storm Legion/Frozen Tempest/Gangnum.lua",
@@ -293,6 +294,7 @@ SavedVariables = {
 	KBMSLRDEEKR_Settings = "account",
 	KBMSLRDEEMP_Settings = "account",
 	KBMSLRDEEPR_Settings = "account",
+	KBMSLRDEERS_Settings = "account",
 	KBMSLRDFT_Settings = "account",
 	KBMSLRDFTCR_Settings = "account",
 	KBMSLRDFTGM_Settings = "account",
@@ -549,6 +551,7 @@ SavedVariables = {
 	chKBMSLRDEEDG_Settings = "character",
 	chKBMSLRDEEKR_Settings = "character",
 	chKBMSLRDEEPR_Settings = "character",
+	chKBMSLRDEERS_Settings = "character",
 	chKBMSLRDFT_Settings = "character",
 	chKBMSLRDFTCR_Settings = "character",
 	chKBMSLRDFTGM_Settings = "character",
