@@ -2,6 +2,11 @@
 
 Storm Legion
 
+Endless Eclipse
+* New: Regulos Template
+* Progenitor Saetos
+** Fixed: Corrected name.
+
 Frozen Tempest
 * Menu
 ** Change: Re-ordered Menu items to better portray progress.
@@ -10,7 +15,7 @@ Frozen Tempest
 ** New: Added personal Alert for Tempest Wrath debuff.
 ** New: Added personal Alert for Move away from the Tempest after debuff drops.
 ** New: Added Alert for Blinding Surge.
-* Zaviel
+* Artifex Zaviel
 ** New: Added personal Alert for Arc Weld mechanic.
 ** New: Added Mechanic Spy for Arc Weld.
 ** New: Added Alert for Energy Conduit cast warning.
@@ -18,11 +23,13 @@ Frozen Tempest
 ** New: Added Tank-Swap monitor for both Dissonant Vitality and Energy Conduit.
 ** New: Added Phase Tracking.
 ** New: Added warning Alert and duration Alert for Ensnaring Jolt.
+** Fixed: Corrected name.
 
 Triumph of the Dragon Queen
 * Cyril
 ** New: Added Tank-Swap monitoring for Mental Anguish.
 ** New: Added Alert for Mien of Supremacy purge. After looking through the logs not entirely sure this work first time, it should though.
+* General Typheria
 
 ----
 v1.3.7
